objects/Field__c.object
<CustomObject><fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textarea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datetime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Url</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>WebToObject__c</fullName>
        <label>WebToObject</label>
        <referenceTo>WebToObject__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>ObjectField</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Field</label><nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Fields</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>